[package]
name = "barcode-wasm"
version = "0.1.0"
authors = ["curry tang <twn39@163.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.93"
rxing = "0.6.1"
image = "0.25.2"
svg = "0.17.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
